// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormOutput rendering renders expected elements 1`] = `
<div
  className="FormOutput"
>
  <div>
    <Label
      htmlFor="test"
      text="Test"
    />
  </div>
  <output
    className="FormOutput__value"
    data-bcn-id="test"
    id="test"
  >
    This is a test
  </output>
</div>
`;

exports[`FormOutput rendering renders expected elements when active is true 1`] = `
<div
  className="FormOutput"
>
  <div>
    <Label
      htmlFor="test"
      text="Test"
    />
  </div>
  <output
    className="FormOutput__value FormOutput--active"
    data-bcn-id="test"
    id="test"
  >
    This is a test
  </output>
</div>
`;

exports[`FormOutput rendering renders expected elements when alignRight is true 1`] = `
<div
  className="FormOutput FormOutput--alignRight"
>
  <div>
    <Label
      htmlFor="test"
      text="Test"
    />
  </div>
  <output
    className="FormOutput__value"
    data-bcn-id="test"
    id="test"
  >
    This is a test
  </output>
</div>
`;

exports[`FormOutput rendering renders expected elements when className is set 1`] = `
<div
  className="FormOutput TestClass"
>
  <div>
    <Label
      htmlFor="test"
      text="Test"
    />
  </div>
  <output
    className="FormOutput__value"
    data-bcn-id="test"
    id="test"
  >
    This is a test
  </output>
</div>
`;
